--- a/featureextraction.ipynb
+++ b/featureextraction.ipynb
@@ -139,7 +139,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate the F1 score for each class\n",
+    "from sklearn.metrics import f1_score\n",
+    "print(\"F1 score for each class -> \",f1_score(Test_Y, predictions_SVM, average=None))"
+   ]
   }
  ],
  "metadata": {
@@ -158,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
