--- a/src/NaiveBayes_TFIDF.ipynb
+++ b/src/NaiveBayes_TFIDF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,10 @@
     "from sklearn.metrics import accuracy_score\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.metrics import classification_report"
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn import model_selection, naive_bayes, svm\n",
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
@@ -20,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Naive Bayes Classifier with Bag Of Words"
+    "# Naive Bayes Classifier with TFIDF"
    ]
   },
   {
@@ -33,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,48 +63,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Build the BOW "
+    "### Build the TFIDF "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "# Here we want to calculate the TF-IDF score for each word in the corpus\n",
     "\n",
-    "#Assigning CountVectorizer to tvariable\n",
-    "count_vect = CountVectorizer().fit(Train_X)\n",
-    "\n",
-    "#Fitting and transforming input data\n",
-    "Train_X_BOW = count_vect.transform(Train_X).toarray()\n",
-    "Test_X_BOW = count_vect.transform(Test_X).toarray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train_X_BOW:  [[0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " ...\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Train_X_BOW: \", Train_X_BOW)\n",
-    "# Save the BOW representation of the data to a csv file\n",
-    "np.savetxt(\"Train_X_BOW.csv\", Train_X_BOW, delimiter=\",\")"
+    "Tfidf_vect = TfidfVectorizer(max_features=27000)\n",
+    "Tfidf_vect.fit(train['text'])\n",
+    "Train_X_Tfidf = Tfidf_vect.transform(Train_X)\n",
+    "Test_X_Tfidf = Tfidf_vect.transform(Test_X)\n"
    ]
   },
   {
@@ -146,7 +122,7 @@
     "print(Counter(stance_Train_Y))\n",
     "# transform the dataset\n",
     "oversample = SMOTE()\n",
-    "SMOTE_Train_X_BOW, SMOTE_stance_Train_Y = oversample.fit_resample(Train_X_BOW, stance_Train_Y)\n",
+    "SMOTE_Train_X_Tfidf, SMOTE_stance_Train_Y = oversample.fit_resample(Train_X_Tfidf, stance_Train_Y)\n",
     "print(Counter(SMOTE_stance_Train_Y))\n"
    ]
   },
@@ -160,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -169,13 +145,13 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          -1       0.17      0.20      0.19        70\n",
-      "           0       0.25      0.28      0.26       126\n",
+      "          -1       0.19      0.21      0.20        70\n",
+      "           0       0.24      0.27      0.26       126\n",
       "           1       0.84      0.82      0.83       804\n",
       "\n",
-      "    accuracy                           0.70      1000\n",
+      "    accuracy                           0.71      1000\n",
       "   macro avg       0.42      0.43      0.43      1000\n",
-      "weighted avg       0.72      0.70      0.71      1000\n",
+      "weighted avg       0.72      0.71      0.71      1000\n",
       "\n"
      ]
     }
@@ -185,23 +161,23 @@
     "NB = GaussianNB()\n",
     "\n",
     "# fit the model with data\n",
-    "NB.fit(Train_X_BOW, stance_Train_Y)\n",
+    "NB.fit(Train_X_Tfidf.toarray(), stance_Train_Y)\n",
     "\n",
     "##perform classification and prediction on samples in tf_test\n",
-    "predicted_NB = NB.predict(Test_X_BOW)\n",
+    "predicted_NB = NB.predict(Test_X_Tfidf.toarray())\n",
     "print(classification_report(stance_Test_Y, predicted_NB))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Naive Bayes Accuracy Score ->  70.5\n",
+      "Naive Bayes Accuracy Score ->  70.6\n",
       "حظر خامنئي المجرم شراء يعد مجزرة متعمدة بحق الشعب الإيراني نقل موقع مريم رجوي موقف رئيسة الجمهورية المنتخبة للمقاومة الإيرانية تصريحات خامنئي المجرم حول حظر استيراد لقاح كورونا الولايات المتحدة بريطانيا فرنسا\n",
       "1\n",
       "1\n"
@@ -234,13 +210,13 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          -1       0.17      0.20      0.19        70\n",
-      "           0       0.25      0.28      0.26       126\n",
+      "          -1       0.19      0.21      0.20        70\n",
+      "           0       0.24      0.27      0.26       126\n",
       "           1       0.84      0.82      0.83       804\n",
       "\n",
-      "    accuracy                           0.70      1000\n",
+      "    accuracy                           0.71      1000\n",
       "   macro avg       0.42      0.43      0.43      1000\n",
-      "weighted avg       0.72      0.70      0.71      1000\n",
+      "weighted avg       0.72      0.71      0.71      1000\n",
       "\n"
      ]
     }
@@ -250,10 +226,10 @@
     "SMOTE_NB = GaussianNB()\n",
     "\n",
     "# fit the model with data\n",
-    "SMOTE_NB.fit(SMOTE_Train_X_BOW, SMOTE_stance_Train_Y)\n",
+    "SMOTE_NB.fit(SMOTE_Train_X_Tfidf.toarray(), SMOTE_stance_Train_Y)\n",
     "\n",
     "##perform classification and prediction on samples in tf_test\n",
-    "predicted_NB = SMOTE_NB.predict(Test_X_BOW)\n",
+    "predicted_NB = SMOTE_NB.predict(Test_X_Tfidf.toarray())\n",
     "print(classification_report(stance_Test_Y, predicted_NB))"
    ]
   },
@@ -298,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +298,7 @@
     "print(Counter(cat_Train_Y))\n",
     "# transform the dataset\n",
     "oversample = SMOTE()\n",
-    "SMOTE_Train_X_BOW, SMOTE_cat_Train_Y = oversample.fit_resample(Train_X_BOW, cat_Train_Y)\n",
+    "SMOTE_Train_X_Tfidf, SMOTE_cat_Train_Y = oversample.fit_resample(Train_X_Tfidf, cat_Train_Y)\n",
     "print(Counter(SMOTE_cat_Train_Y))\n"
    ]
   },
@@ -336,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -346,19 +322,19 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "      advice       0.38      0.30      0.33        10\n",
-      "   celebrity       0.72      0.59      0.65       145\n",
-      "   info_news       0.65      0.64      0.65       545\n",
+      "   celebrity       0.72      0.57      0.64       145\n",
+      "   info_news       0.64      0.65      0.65       545\n",
       "      others       0.07      0.06      0.06        17\n",
-      "    personal       0.38      0.42      0.40       128\n",
+      "    personal       0.36      0.39      0.37       128\n",
       "        plan       0.15      0.20      0.17        82\n",
       "    requests       0.12      0.10      0.11        20\n",
       "restrictions       0.00      0.00      0.00         2\n",
       "      rumors       0.00      0.00      0.00        15\n",
-      "   unrelated       0.37      0.31      0.33        36\n",
+      "   unrelated       0.38      0.31      0.34        36\n",
       "\n",
       "    accuracy                           0.52      1000\n",
       "   macro avg       0.28      0.26      0.27      1000\n",
-      "weighted avg       0.54      0.52      0.53      1000\n",
+      "weighted avg       0.53      0.52      0.52      1000\n",
       "\n"
      ]
     }
@@ -368,23 +344,23 @@
     "NB = GaussianNB()\n",
     "\n",
     "# fit the model with data\n",
-    "NB.fit(Train_X_BOW, cat_Train_Y)\n",
+    "NB.fit(Train_X_Tfidf.toarray(), cat_Train_Y)\n",
     "\n",
     "##perform classification and prediction on samples in tf_test\n",
-    "predicted_NB = NB.predict(Test_X_BOW)\n",
+    "predicted_NB = NB.predict(Test_X_Tfidf.toarray())\n",
     "print(classification_report(cat_Test_Y, predicted_NB))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Naive Bayes Accuracy Score ->  52.2\n",
+      "Naive Bayes Accuracy Score ->  51.800000000000004\n",
       "حظر خامنئي المجرم شراء يعد مجزرة متعمدة بحق الشعب الإيراني نقل موقع مريم رجوي موقف رئيسة الجمهورية المنتخبة للمقاومة الإيرانية تصريحات خامنئي المجرم حول حظر استيراد لقاح كورونا الولايات المتحدة بريطانيا فرنسا\n",
       "info_news\n",
       "info_news\n"
@@ -418,15 +394,15 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "      advice       0.38      0.30      0.33        10\n",
-      "   celebrity       0.75      0.59      0.66       145\n",
-      "   info_news       0.65      0.64      0.65       545\n",
+      "   celebrity       0.75      0.57      0.65       145\n",
+      "   info_news       0.64      0.65      0.65       545\n",
       "      others       0.07      0.06      0.06        17\n",
-      "    personal       0.38      0.42      0.40       128\n",
+      "    personal       0.36      0.39      0.37       128\n",
       "        plan       0.16      0.22      0.18        82\n",
       "    requests       0.12      0.10      0.11        20\n",
       "restrictions       0.00      0.00      0.00         2\n",
       "      rumors       0.00      0.00      0.00        15\n",
-      "   unrelated       0.37      0.31      0.33        36\n",
+      "   unrelated       0.38      0.31      0.34        36\n",
       "\n",
       "    accuracy                           0.52      1000\n",
       "   macro avg       0.29      0.26      0.27      1000\n",
@@ -440,10 +416,10 @@
     "SMOTE_NB = GaussianNB()\n",
     "\n",
     "# fit the model with data\n",
-    "SMOTE_NB.fit(SMOTE_Train_X_BOW, SMOTE_cat_Train_Y)\n",
+    "SMOTE_NB.fit(SMOTE_Train_X_Tfidf.toarray(), SMOTE_cat_Train_Y)\n",
     "\n",
     "##perform classification and prediction on samples in tf_test\n",
-    "predicted_NB = SMOTE_NB.predict(Test_X_BOW)\n",
+    "predicted_NB = SMOTE_NB.predict(Test_X_Tfidf.toarray())\n",
     "print(classification_report(cat_Test_Y, predicted_NB))"
    ]
   },
@@ -456,7 +432,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Naive Bayes Accuracy Score ->  52.400000000000006\n",
+      "Naive Bayes Accuracy Score ->  52.0\n",
       "حظر خامنئي المجرم شراء يعد مجزرة متعمدة بحق الشعب الإيراني نقل موقع مريم رجوي موقف رئيسة الجمهورية المنتخبة للمقاومة الإيرانية تصريحات خامنئي المجرم حول حظر استيراد لقاح كورونا الولايات المتحدة بريطانيا فرنسا\n",
       "info_news\n",
       "info_news\n"
@@ -494,12 +470,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9650cb4e16cdd4a8e8e2d128bf38d875813998db22a3c986335f89e0cb4d7bb2"
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
    }
   }
  },
