--- a/src/SVM_TFIDF.ipynb
+++ b/src/SVM_TFIDF.ipynb
@@ -12,7 +12,8 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn import model_selection, naive_bayes, svm\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.preprocessing import LabelEncoder"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.metrics import classification_report\n"
    ]
   },
   {
@@ -20,7 +21,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SVM with TF-IDF"
+    "# SVM Classifier with TF-IDF"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read the data"
    ]
   },
   {
@@ -31,21 +40,28 @@
    "source": [
     "##############For Training Data#####################\n",
     "# Read the data from the csv file named 'preprocessedData.csv' arabic data\n",
-    "train = pd.read_csv('../Dataset/train.csv', encoding='utf-8')\n",
-    "# Perform the data preprocessing\n",
-    "train = clean_data(train)\n",
+    "train = pd.read_csv('../Dataset/cleaned_train.csv', encoding='utf-8')\n",
     "# Unpack the data into text and stance\n",
     "Train_X = train['text']\n",
-    "Train_Y = train['stance']\n",
+    "stance_Train_Y = train['stance']\n",
+    "cat_Train_Y = train['category']\n",
     "\n",
     "##############For Testing Data#####################\n",
-    "test = pd.read_csv('../Dataset/dev.csv', encoding='utf-8')\n",
+    "test = pd.read_csv('../Dataset/cleaned_dev.csv', encoding='utf-8')\n",
     "# Perform the data preprocessing\n",
     "test = clean_data(test)\n",
     "# Unpack the data into text, and stance\n",
     "Test_X = test['text']\n",
-    "Test_Y = test['stance']\n",
-    "# Train_X, Test_X, Train_Y, Test_Y = model_selection.train_test_split(data['text'],data['stance'],test_size=0.3)\n"
+    "stance_Test_Y = test['stance']\n",
+    "cat_Test_Y = test['category']\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Build the TFIDF"
    ]
   },
   {
@@ -60,6 +76,23 @@
     "Tfidf_vect.fit(train['text'])\n",
     "Train_X_Tfidf = Tfidf_vect.transform(Train_X)\n",
     "Test_X_Tfidf = Tfidf_vect.transform(Test_X)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6988, 26884)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Train_X_Tfidf.shape)"
    ]
   },
   {
@@ -234,12 +267,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9650cb4e16cdd4a8e8e2d128bf38d875813998db22a3c986335f89e0cb4d7bb2"
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
    }
   }
  },
