--- a/src/Bert.ipynb
+++ b/src/Bert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,18 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_sentence_embeddings(sentences):\n",
-    "    preprocessed_text=bert_proprocess(sentences)\n",
-    "    return bert_encoder(preprocessed_text)['pooled_output']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,29 +114,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_1\"\n",
+      "Model: \"model_3\"\n",
       "__________________________________________________________________________________________________\n",
       " Layer (type)                   Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
       " text (InputLayer)              [(None,)]            0           []                               \n",
       "                                                                                                  \n",
-      " keras_layer_2 (KerasLayer)     {'input_mask': (Non  0           ['text[0][0]']                   \n",
-      "                                e, 128),                                                          \n",
-      "                                 'input_word_ids':                                                \n",
+      " keras_layer_4 (KerasLayer)     {'input_word_ids':   0           ['text[0][0]']                   \n",
       "                                (None, 128),                                                      \n",
       "                                 'input_type_ids':                                                \n",
-      "                                (None, 128)}                                                      \n",
+      "                                (None, 128),                                                      \n",
+      "                                 'input_mask': (Non                                               \n",
+      "                                e, 128)}                                                          \n",
       "                                                                                                  \n",
-      " keras_layer_3 (KerasLayer)     {'default': (None,   109482241   ['keras_layer_2[0][0]',          \n",
-      "                                768),                             'keras_layer_2[0][1]',          \n",
-      "                                 'encoder_outputs':               'keras_layer_2[0][2]']          \n",
+      " keras_layer_5 (KerasLayer)     {'default': (None,   109482241   ['keras_layer_4[0][0]',          \n",
+      "                                768),                             'keras_layer_4[0][1]',          \n",
+      "                                 'pooled_output': (               'keras_layer_4[0][2]']          \n",
+      "                                None, 768),                                                       \n",
+      "                                 'encoder_outputs':                                               \n",
       "                                 [(None, 128, 768),                                               \n",
       "                                 (None, 128, 768),                                                \n",
       "                                 (None, 128, 768),                                                \n",
@@ -160,12 +151,10 @@
       "                                 (None, 128, 768),                                                \n",
       "                                 (None, 128, 768),                                                \n",
       "                                 (None, 128, 768)],                                               \n",
-      "                                 'pooled_output': (                                               \n",
-      "                                None, 768),                                                       \n",
       "                                 'sequence_output':                                               \n",
       "                                 (None, 128, 768)}                                                \n",
       "                                                                                                  \n",
-      " dropout (Dropout)              (None, 768)          0           ['keras_layer_3[0][13]']         \n",
+      " dropout (Dropout)              (None, 768)          0           ['keras_layer_5[0][13]']         \n",
       "                                                                                                  \n",
       " output (Dense)                 (None, 1)            769         ['dropout[0][0]']                \n",
       "                                                                                                  \n",
@@ -183,52 +172,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split each tweet into words\n",
-    "Train_X = Train_X.apply(lambda x: x.split())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    [بيل, غيتس, يتلقى, لقاح, تصوير, الابرة, السيرن...\n",
-      "1    [وزير, الصحة, لحد, اليوم, وتحديدا, هلأ, بمؤتمر...\n",
-      "2    [قولكن, رح, يكونو, اد, المسؤولية, لبنان, يوصل,...\n",
-      "3    [وزير, الصحة, فخر, الدين, قوجة, يتلقى, جرعة, ل...\n",
-      "4    [وئام, وهاب, يشتم, الدول, الخليجية, طلة, اعلام...\n",
-      "Name: text, dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(Train_X.head(5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Failed to convert a NumPy array to a Tensor (Unsupported object type list).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_18180\\2541584170.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimizers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mAdam\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1e-5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mloss\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlosses\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mBinaryCrossentropy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfrom_logits\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mMETRICS\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mhistory\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mTrain_X\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mstance_Train_Y\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\Users\\osama\\anaconda3\\lib\\site-packages\\keras\\utils\\traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     68\u001b[0m             \u001b[1;31m# To get the full stack trace, call:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m             \u001b[1;31m# `tf.debugging.disable_traceback_filtering()`\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 70\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     71\u001b[0m         \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     72\u001b[0m             \u001b[1;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\tensorflow\\python\\framework\\constant_op.py\u001b[0m in \u001b[0;36mconvert_to_eager_tensor\u001b[1;34m(value, ctx, dtype)\u001b[0m\n\u001b[0;32m    100\u001b[0m       \u001b[0mdtype\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdtypes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_dtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_datatype_enum\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    101\u001b[0m   \u001b[0mctx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mensure_initialized\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 102\u001b[1;33m   \u001b[1;32mreturn\u001b[0m \u001b[0mops\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mEagerTensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mctx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdevice_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    103\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    104\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Failed to convert a NumPy array to a Tensor (Unsupported object type list)."
+      "Epoch 1/15\n",
+      "219/219 [==============================] - 56s 244ms/step - loss: 0.5970 - accuracy: 0.7924 - precision: 0.8552 - recall: 0.9998\n",
+      "Epoch 2/15\n",
+      "219/219 [==============================] - 54s 245ms/step - loss: 0.5933 - accuracy: 0.7925 - precision: 0.8552 - recall: 1.0000\n",
+      "Epoch 3/15\n",
+      "219/219 [==============================] - 54s 248ms/step - loss: 0.5957 - accuracy: 0.7926 - precision: 0.8553 - recall: 1.0000\n",
+      "Epoch 4/15\n",
+      "219/219 [==============================] - 53s 244ms/step - loss: 0.5924 - accuracy: 0.7924 - precision: 0.8552 - recall: 0.9998\n",
+      "Epoch 5/15\n",
+      "219/219 [==============================] - 53s 244ms/step - loss: 0.5913 - accuracy: 0.7924 - precision: 0.8552 - recall: 0.9998\n",
+      "Epoch 6/15\n",
+      "219/219 [==============================] - 53s 244ms/step - loss: 0.5908 - accuracy: 0.7925 - precision: 0.8552 - recall: 1.0000\n",
+      "Epoch 7/15\n",
+      "219/219 [==============================] - 54s 246ms/step - loss: 0.5898 - accuracy: 0.7925 - precision: 0.8552 - recall: 1.0000\n",
+      "Epoch 8/15\n",
+      "219/219 [==============================] - 53s 244ms/step - loss: 0.5927 - accuracy: 0.7925 - precision: 0.8552 - recall: 1.0000\n",
+      "Epoch 9/15\n",
+      "219/219 [==============================] - 53s 244ms/step - loss: 0.5917 - accuracy: 0.7925 - precision: 0.8552 - recall: 1.0000\n",
+      "Epoch 10/15\n",
+      "219/219 [==============================] - 54s 244ms/step - loss: 0.5919 - accuracy: 0.7925 - precision: 0.8552 - recall: 1.0000\n",
+      "Epoch 11/15\n",
+      "219/219 [==============================] - 53s 243ms/step - loss: 0.5885 - accuracy: 0.7925 - precision: 0.8552 - recall: 1.0000\n",
+      "Epoch 12/15\n",
+      "219/219 [==============================] - 54s 245ms/step - loss: 0.5884 - accuracy: 0.7925 - precision: 0.8552 - recall: 1.0000\n",
+      "Epoch 13/15\n",
+      "219/219 [==============================] - 54s 245ms/step - loss: 0.5843 - accuracy: 0.7926 - precision: 0.8553 - recall: 1.0000\n",
+      "Epoch 14/15\n",
+      "219/219 [==============================] - 53s 244ms/step - loss: 0.5881 - accuracy: 0.7924 - precision: 0.8552 - recall: 0.9998\n",
+      "Epoch 15/15\n",
+      "219/219 [==============================] - 54s 248ms/step - loss: 0.5876 - accuracy: 0.7924 - precision: 0.8552 - recall: 0.9998\n"
      ]
     }
    ],
@@ -236,34 +216,65 @@
     "METRICS=[tf.keras.metrics.BinaryAccuracy(name='accuracy'),tf.keras.metrics.Precision(name='precision'),tf.keras.metrics.Recall(name='recall')]\n",
     "\n",
     "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=1e-5),loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),metrics=METRICS)\n",
-    "history = model.fit(Train_X,stance_Train_Y,epochs=5)\n"
+    "history = model.fit(Train_X,stance_Train_Y,epochs=15)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55/55 [==============================] - 301s 5s/step - loss: 0.5832 - accuracy: 0.7928 - precision: 0.8552 - recall: 1.0000\n"
+      "32/32 [==============================] - 9s 240ms/step - loss: 0.5758 - accuracy: 0.8040 - precision: 0.8740 - recall: 1.0000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.5831922292709351, 0.7927876114845276, 0.8551803231239319, 1.0]"
+       "[0.5758407115936279, 0.8040000200271606, 0.8740000128746033, 1.0]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.evaluate(Test_X,Test_Y)"
+    "model.evaluate(Test_X,stance_Test_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       1\n",
+      "1       1\n",
+      "2       1\n",
+      "3       1\n",
+      "4       0\n",
+      "       ..\n",
+      "6983    1\n",
+      "6984    0\n",
+      "6985    1\n",
+      "6986    1\n",
+      "6987    1\n",
+      "Name: stance, Length: 6988, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# f1 score for the model\n",
+    "# predict the stance for the test data\n",
+    "# pred = model.predict(Test_X)\n",
+    "print(stance_Train_Y)\n"
    ]
   },
   {
@@ -271,10 +282,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# y_predict = model.predict(Test_X)\n",
-    "# y_predicted = y_predict.flatten()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
